# salk_toolkit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  add_missing_blocks.py  app.py  constant_response.py  examples.ipynb  explorer.py  index.html  io.html  pyproject.toml  pyrightconfig.json  represent.py  reproduce_meta_bug.py  search.json  settings.ini  setup.py  sitemap.xml  straightliners.py  test_config_loading.py  test_direct_import.py  trace_paths.py  trace_paths2.py  utils.html
.agents/skills/stk-data-annotations/: SKILL.md  legacy.md
.agents/skills/stk-data-annotations/examples/: example_cati_data.csv  example_cati_meta.json  example_web_data.csv  example_web_meta.json
.agents/skills/stk-pp-plots/: SKILL.md
.cursor/commands/: spec_create.md  spec_implement.md  spec_review.md  spec_validate.md
.cursor/rules/: autogenerated.mdc  dashboard.mdc  data_annotations.mdc  general.mdc  plot_pipeline.mdc  salk_toolkit.mdc  specs.mdc  stk_short.mdc  testing.mdc  tools.mdc
.cursor/rules/spec_verbs/: spec_create.mdc  spec_implement.mdc  spec_review.mdc  spec_validate.mdc
.cursor/skills/stk-data-annotations/: SKILL.md
.cursor/skills/stk-data-annotations/examples/: example_cati_meta.json  example_census.csv  example_web_data.csv  example_web_meta.json
.github/workflows/: static.yml
_docs/: commands.html  dashboard.html  election_models.html  index.html  io.html  plots.html  pp.html  robots.txt  sitemap.xml  utils.html  validation.html
data/: combined_meta.json  master_fragment.csv  master_meta.json  salk25.sav  salk25_meta.json  salk25oc_meta.json
nbs/: 01_io.ipynb  02_pp.ipynb  03_plots.ipynb  04_election_models.ipynb  05_dashboard.ipynb  06_validation.ipynb  10_utils.ipynb  11_commands.ipynb  _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml
salk_toolkit/: __init__.py  _modidx.py  commands.py  dashboard.py  data_server.py  election_models.py  explorer.py  io.py  payload.py  plots.py  pp.py  serialization.py  utils.py  validation.py
salk_toolkit/io/: __init__.py  core.py  create_blocks.py  datasets.py  meta.py  parquet.py  pipeline.py  readers.py  sources.py
salk_toolkit/pp/: __init__.py  common.py  filters.py  matching.py  meta.py  plotting.py  registry.py  transforms.py  wrangle.py
salk_toolkit/tools/: __init__.py  annotator.py  explorer.py  s3_util.py
salk_toolkit/tools/annotator/: __init__.py  annotator.py  columns.py  constants.py  files.py  framework.py
salk_toolkit/tools/annotator/.cursor/rules/: annotator.mdc
specs/: 2026-04-02-maxdiff-topk-schema-refactor.md  2026-04-20-block-processing-migration.md  2026-04-20-block-processing-pipeline.md  2026-04-20-translate-subgroups-choice-mapping.md  2026-04-23-unified-block-processing-plan.md  DEV-#12-remove-nbdev.md  DEV-#14-lint-cleanup.md  DEV-#15-improved-typing.md  DEV-#19-multi-source-columns.md  DEV-000-remove-nbdev.md  DEV-003-lint-cleanup.md  DEV-37-auth-bypass-user.md  DEV-XXX-auth-bypass-user.md  TOOL-001-explorer.md  TOOL-002-annotations-editor.md  TOOL-002-json-block-editor.md  block-processing.md  io-pipeline-refactor-design.md  stable-row-index-design.md
tests/: __init__.py  conftest.py  reproduce_panic.py  test_config_precedence.py  test_dashboard.py  test_dashboard_config.py  test_election_models.py  test_io.py  test_named_datasets.py  test_plot_payload.py  test_plots.py  test_pp.py  test_serialization.py  test_utils.py  test_validation.py
tests/data/: master_bootstrap.parquet  master_meta.json
tests/reference_plots/: test_area_smooth.json  test_area_smooth_matching_plots.json  test_barbell.json  test_barbell_matching_plots.json  test_boxplots_basic.json  test_boxplots_basic_matching_plots.json  test_boxplots_convert_res.json  test_boxplots_raw.json  test_boxplots_raw_matching_plots.json  test_columns_basic.json  test_columns_basic_matching_plots.json  test_columns_sorted_median.json  test_columns_sorted_median_matching_plots.json  test_columns_thermometer.json  test_columns_thermometer_matching_plots.json  test_corr_matrix.json  test_corr_matrix_matching_plots.json  test_density_raw_stacked.json  test_density_raw_stacked_matching_plots.json  test_diff_columns.json  test_diff_columns_matching_plots.json  test_facet_dist.json  test_geoplot.json  test_geoplot_matching_plots.json  test_geoplot_outer_colors_gradient.json  test_geoplot_outer_colors_gradient_matching_plots.json  test_likert_bars_basic.json  test_likert_bars_no_factors.json  test_likert_bars_no_factors_matching_plots.json  test_likert_bars_with_metadata.json  test_likert_bars_with_metadata_matching_plots.json  test_likert_rad_pol.json  test_likert_rad_pol_matching_plots.json  test_lines_date.json  test_lines_date_matching_plots.json  test_lines_hdi_basic.json  test_lines_hdi_basic_matching_plots.json  test_lines_hdi_with_num_values.json  test_lines_hdi_with_num_values_matching_plots.json  test_lines_smooth.json  (+20 more)
tests/utils/: __init__.py  plot_comparison.py
