[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "salk_toolkit"
version = "0.9.1"
description = "Toolkit for annotated survey data ingestion, plotting, and dashboards"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
  { name = "Margus Niitsoo", email = "velochy@gmail.com" },
]
keywords = ["polling", "survey", "annotations", "dashboard", "altair"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "altair",
  "arviz",
  "authlib",
  "frontegg",
  "hsluv",
  "ipywidgets",
  "kdepy",
  "libsql_client",
  "matplotlib",
  "numpy",
  "pandas",
  "pillow",
  "polars==1.27.1",
  "polib",
  "psutil",
  "pyarrow",
  "pydantic",
  "pydantic_extra_types",
  "pyreadstat",
  "python-Levenshtein",
  "pyyaml",
  "s3fs",
  "scipy",
  "streamlit<=1.52.2",
  "streamlit-authenticator==0.3.3",
  "streamlit-dimensions",
  "streamlit-js",
  "streamlit_option_menu",
  "streamlit_dimensions",
  "vl-convert-python",
]

[project.optional-dependencies]
dev = [
  "pyright>=1.1",
  "pdoc>=14.0",
  "pre-commit>=3.0",
  "pytest>=7.0",
  "types-polib",
  "types-PyYAML",
  "types-tqdm",
  "pandas-stubs",
  "deepl",
]

[project.scripts]
stk_explorer = "salk_toolkit.commands:run_explorer"
stk_translate_dashboard = "salk_toolkit.commands:translate_dashboard"

[project.urls]
Homepage = "https://github.com/salk-ee/salk_toolkit"
Repository = "https://github.com/salk-ee/salk_toolkit"
Issues = "https://github.com/salk-ee/salk_toolkit/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["salk_toolkit*"]

[tool.ruff]
line-length = 120
indent-width = 4
extend-exclude = ["**.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "W", "D1", "ANN"]
ignore = [
  "E731" # lambda-assignment - this has legitimate uses!
]
extend-per-file-ignores = { "tests/**/*" = ["ANN"] }

[tool.pdoc]
docformat = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = [
    "salk_toolkit",
    "tests",
]
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportAttributeAccessIssue = false
reportArgumentType = false
reportReturnType = true
reportCallIssue = true
reportOptionalIterable = true
reportIndexIssue = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalOperand = true
reportGeneralTypeIssues = true
exclude = [
    "tests",
    "**/__pycache__",
    "**/.ipynb_checkpoints",
    "**.ipynb",
]
